# MLAssignment1

./: .gitignore  CS4375_ProjectDoc.docx  README.md  pyproject.toml  requirements.txt
data/: winequality-red-preprocessed.csv
data/test/: winequality-red-testing.csv
data/train/: winequality-red-training.csv
mlassignment1/: homework1.ipynb  part_3.ipynb  parts_1_and_2.ipynb  preprocess_data.py
