[tool.poetry]
name = "mlassignment1"
version = "0.1.0"
description = ""
authors = ["NicholasZolton <78943323+NicholasZolton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
