[tool.poetry]
name = "mlassignment1"
version = "0.1.0"
description = ""
authors = ["NicholasZolton <78943323+NicholasZolton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
